[gd_scene load_steps=30 format=2]

[ext_resource path="res://Hazard/Bomb.gd" type="Script" id=1]
[ext_resource path="res://GFX/Items/Bomb.png" type="Texture" id=2]
[ext_resource path="res://GFX/Items/bomb2.png" type="Texture" id=3]
[ext_resource path="res://GFX/Items/bomb1.png" type="Texture" id=4]
[ext_resource path="res://SFX/bomb.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "light",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=20]
radius = 38.6005

[sub_resource type="Animation" id=23]
resource_name = "Bomb"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "light", "light" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.158442, 0.412987, 0.748052 )
colors = PoolColorArray( 0.944364, 0.948242, 0.91861, 1, 0.868292, 0.999023, 0, 1, 0.854492, 0.487973, 0.156879, 1, 0.901961, 0.0627451, 0.0627451, 0.694118 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
min_value = -400.0
max_value = 400.0
_data = [ Vector2( 0, 400 ), 0.0, 356.171, 0, 0, Vector2( 0.20098, 95.4546 ), -2899.83, -2899.83, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
max_value = 2.5
_data = [ Vector2( 0.0220588, 2.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.09943 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.42
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 26 )
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 27 )
color_ramp = SubResource( 25 )

[sub_resource type="Curve" id=8]
max_value = 500.0
_data = [ Vector2( 0, 334.659 ), 0.0, 1214.1, 0, 0, Vector2( 0.0808823, 0 ), -40568.2, 1.088, 0, 1, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=28]
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
max_value = 3.0
_data = [ Vector2( 0, 2.60795 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=29]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 140, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.4
linear_accel_curve = SubResource( 28 )
scale = 2.5
scale_random = 1.0
scale_curve = SubResource( 29 )
color_ramp = SubResource( 25 )

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0.0883117, 0.94026 )
colors = PoolColorArray( 0.290196, 0.239216, 0.239216, 0.878431, 0.639216, 0.639216, 0.639216, 0.152941 )

[sub_resource type="GradientTexture" id=30]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=15]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 106.818 ), 0.0, 16023.3, 0, 0, Vector2( 0.117647, -42.2727 ), -1267.27, 0.0, 1, 0, Vector2( 1, -60.4545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=31]
curve = SubResource( 15 )

[sub_resource type="Curve" id=17]
min_value = 0.99
max_value = 5.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 5 ), 0.947129, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=19]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.5
orbit_velocity = 0.15
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 31 )
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 32 )
color_ramp = SubResource( 30 )

[sub_resource type="CircleShape2D" id=33]
radius = 109.005

[node name="Bomb" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 22 )
speed_scale = 3.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
anims/Bomb = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 1.2, 1.2 )
emitting = false
amount = 200
one_shot = true
speed_scale = 2.0
explosiveness = 0.6
process_material = SubResource( 7 )

[node name="Particles2D" type="Particles2D" parent="Particles2D"]
position = Vector2( 0, -1 )
emitting = false
amount = 10
lifetime = 0.6
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
process_material = SubResource( 12 )

[node name="Particles2D2" type="Particles2D" parent="Particles2D"]
show_behind_parent = true
emitting = false
amount = 500
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
process_material = SubResource( 19 )

[node name="Particles2D3" type="Particles2D" parent="Particles2D"]
self_modulate = Color( 1, 1, 1, 0.156863 )
z_index = 1
emitting = false
amount = 500
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
process_material = SubResource( 19 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 4.0
pitch_scale = 0.8

[node name="ShockWave" type="Area2D" parent="."]
collision_layer = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShockWave"]
visible = false
shape = SubResource( 33 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ShockWave" to="." method="_on_ShockWave_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
